src/command/snapshots/obelisk__command__integration_tests__greet_activity_events.snap
---
source: src/command/integration_tests.rs
expression: events
---
{
  "events": [
    {
      "created_at": "<TIMESTAMP>",
      "event": {
        "locked": {
          "component_id": {
            "component_type": "activity",
            "name": "test_greet_activity",
            "component_digest": "sha256:<REDACTED>"
          },
          "executor_id": "Exr_<REDACTED>",
          "deployment_id": "Dep_<REDACTED>",
          "run_id": "Run_<REDACTED>",
          "lock_expires_at": "<TIMESTAMP>",
          "retry_config": {
            "max_retries": 5,
            "retry_exp_backoff": {
              "secs": 0,
              "nanos": 100000000
            }
          }
        }
      },
      "version": 1
    },
    {
      "created_at": "<TIMESTAMP>",
      "event": {
        "finished": {
          "retval": {
            "ok": {
              "type": "string",
              "value": "Hello, World!"
            }
          },
          "http_client_traces": []
        }
      },
      "version": 2
    }
  ],
  "max_version": 2
}
