src/command/snapshots/obelisk__command__integration_tests__greet_activity_logs.snap
---
source: src/command/integration_tests.rs
expression: logs
---
[
  {
    "cursor": "<TIMESTAMP>",
    "run_id": "Run_<REDACTED>",
    "execution_id": "E_<REDACTED>",
    "type": "log",
    "created_at": "<TIMESTAMP>",
    "level": "info",
    "message": "Greeting World"
  }
]
