src/command/snapshots/obelisk__command__integration_tests__greet_activity_status.snap
---
source: src/command/integration_tests.rs
expression: status
---
{
  "execution_id": "E_<REDACTED>",
  "ffqn": "testing:integration/activity-greet.greet",
  "pending_state": {
    "status": "finished",
    "version": 2,
    "finished_at": "<TIMESTAMP>",
    "result_kind": "ok"
  },
  "created_at": "<TIMESTAMP>",
  "first_scheduled_at": "<TIMESTAMP>",
  "component_digest": "sha256:<REDACTED>",
  "component_type": "activity",
  "deployment_id": "Dep_<REDACTED>"
}
