src/command/snapshots/obelisk__command__integration_tests__list_functions.snap
---
source: src/command/integration_tests.rs
expression: functions
---
[
  {
    "ffqn": "testing:integration/activity.add"
  },
  {
    "ffqn": "testing:integration/fetch-get-denied.fetch-get"
  },
  {
    "ffqn": "testing:integration/fetch-get-allowed.fetch-get"
  },
  {
    "ffqn": "testing:integration/activity-env.read-env"
  },
  {
    "ffqn": "testing:integration/activity-make-record.make-record"
  },
  {
    "ffqn": "testing:integration/activity-throw-variant.throw-variant"
  },
  {
    "ffqn": "testing:integration/activity-throw-null.throw-null"
  },
  {
    "ffqn": "testing:integration/exec-greet.greet-inline"
  },
  {
    "ffqn": "testing:integration/stubs.my-stub"
  },
  {
    "ffqn": "testing:integration/workflow-add.add-workflow"
  },
  {
    "ffqn": "testing:integration/workflow-add.add-workflow-cancellable"
  },
  {
    "ffqn": "testing:integration/workflow-sleep.sleep-cancellable"
  },
  {
    "ffqn": "testing:integration/workflow-add-via-activity.add-via-activity"
  },
  {
    "ffqn": "testing:integration/workflow-call-activity.call-activity"
  },
  {
    "ffqn": "testing:integration/workflow-import-call-activity.call-activity"
  },
  {
    "ffqn": "testing:integration/workflow-import-star-call-activity.call-activity"
  },
  {
    "ffqn": "testing:integration/workflow-import-schedule-activity.schedule-activity"
  },
  {
    "ffqn": "testing:integration/workflow-import-ext-activity.add-via-activity"
  },
  {
    "ffqn": "testing:integration/workflow-import-stub-activity.call-stub"
  },
  {
    "ffqn": "testing:integration/workflow-make-record.make-record"
  },
  {
    "ffqn": "testing:integration/workflow-throw-variant.throw-variant"
  },
  {
    "ffqn": "testing:integration/workflow-throw-null.throw-null"
  },
  {
    "ffqn": "testing:integration/workflow-call-stub.call-stub"
  },
  {
    "ffqn": "testing:integration/workflow-join-next-try-semantics.join-next-try-semantics"
  },
  {
    "ffqn": "testing:integration/workflow-rethrow-child-error.rethrow-child-error"
  },
  {
    "ffqn": "testing:integration/workflow-cancel-child-error.cancel-child-error"
  },
  {
    "ffqn": "testing:integration/workflow-cancel-sleep-error.cancel-sleep-error"
  },
  {
    "ffqn": "testing:integration/workflow-cancel-delay-error.cancel-delay-error"
  },
  {
    "ffqn": "testing:integration/workflow-math-random.math-random"
  },
  {
    "ffqn": "testing:integration/workflow-date-now.date-now"
  },
  {
    "ffqn": "testing:integration/workflow-return-wrong-type.return-wrong-type"
  }
]
