src/command/snapshots/obelisk__command__integration_tests__workflow_call_activity_events.snap
---
source: src/command/integration_tests.rs
expression: events
---
{
  "events": [
    {
      "created_at": "<TIMESTAMP>",
      "event": {
        "locked": {
          "component_id": {
            "component_type": "workflow",
            "name": "test_call_activity_workflow",
            "component_digest": "sha256:<REDACTED>"
          },
          "executor_id": "Exr_<REDACTED>",
          "deployment_id": "Dep_<REDACTED>",
          "run_id": "Run_<REDACTED>",
          "lock_expires_at": "<TIMESTAMP>",
          "retry_config": {
            "max_retries": null,
            "retry_exp_backoff": {
              "secs": 0,
              "nanos": 100000000
            }
          }
        }
      },
      "version": 1
    },
    {
      "created_at": "<TIMESTAMP>",
      "event": {
        "history_event": {
          "event": {
            "type": "join_set_create",
            "join_set_id": "o:1-add"
          }
        }
      },
      "version": 2
    },
    {
      "created_at": "<TIMESTAMP>",
      "event": {
        "history_event": {
          "event": {
            "type": "join_set_request",
            "join_set_id": "o:1-add",
            "request": {
              "type": "child_execution_request",
              "child_execution_id": "E_<REDACTED>",
              "target_ffqn": "testing:integration/activity.add",
              "params": [
                3,
                4
              ],
              "result": {
                "Ok": null
              }
            }
          }
        }
      },
      "version": 3
    },
    {
      "created_at": "<TIMESTAMP>",
      "event": {
        "history_event": {
          "event": {
            "type": "join_next",
            "join_set_id": "o:1-add",
            "run_expires_at": "<TIMESTAMP>",
            "requested_ffqn": "testing:integration/activity.add",
            "closing": false
          }
        }
      },
      "version": 4
    },
    {
      "created_at": "<TIMESTAMP>",
      "event": {
        "finished": {
          "retval": {
            "ok": {
              "type": "u32",
              "value": 7
            }
          },
          "http_client_traces": null
        }
      },
      "version": 5
    }
  ],
  "max_version": 5
}
